--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,42 +1,81 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.main-content{
+  background-color: rgb(65, 91, 130);
+  width: 100%;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.posts-list-container{
+  background-color: aliceblue;
+  width: 60rem;
+  margin: 5rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.post-container{
+  margin: 2rem 1rem;
+}
+
+.post-header{
+  display: flex;
+  justify-content: space-between;
+  font-size: 22px;
+}
+
+.post-date{
+  margin-right: 1rem;
+}
+
+.post-header-right{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.post-content{
+  margin-top: 1rem;
+}
+
+button{
+  font-size: 22px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: white;
+  font-weight: 600;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.button-add{
+  background-color: rgb(104, 169, 104);
+  border: 0;
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button-mod{
+  background-color: rgb(201, 183, 77);
+  border: 0;
 }
 
-button {
-  font-size: calc(10px + 2vmin);
+.button-del{
+  background-color: rgb(143, 52, 51);
+  border: 0;
+}
+
+.button-container{
+  width: 100%;
+}
+
+.modal-container{
+  margin: 1rem auto;
+  width: 30rem;
+}
+
+.modal-form{
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
 }
